--- a/pfaProject/Angular/src/app/candidat/add-candidat/add-candidat.component.html
+++ b/pfaProject/Angular/src/app/candidat/add-candidat/add-candidat.component.html
@@ -91,8 +91,8 @@
     <div class="form-row">
       <div class="col-md-4 mb-3"></div>
       <div class="col-md-4 mb-3">
-        <button class="btn-large btn-submit center-align" type="submit"
-                style="font-family: cursive; height:120% ; margin-left: 5%; font-size: 30px;
+        <button class="center-align" type="submit"
+                style="font-family: cursive; height:auto; width:80% ; margin-left: 5%; font-size: 30px;
                     background-image: linear-gradient(to right, #f7ac52, #f99081);">
           Create Candidat
         </button>
