--- a/pfaProject/Angular/src/app/candidature/add-candidature/add-candidature.component.html
+++ b/pfaProject/Angular/src/app/candidature/add-candidature/add-candidature.component.html
@@ -7,91 +7,73 @@
 
 <div class="ligne-vide row" style="margin-top: 5%; "></div>
 
-<div class="ligne-form row">
-  <form class="needs-validation" novalidate>
-    <!--id="add-candidat-form" #addcandidat="ngForm" -->
-    <div class="form-row">
-      <div class="col-md-5 mb-3">
-        <label for="validationCustom01">First name</label>
-        <!-- #nom_Candidat="ngForm" [(ngModel)]="candidat.nom_candidat" -->
-        <input type="text" class="form-control" id="nom_candidat" value=".." required>
-        <div class="valid-feedback">
-          Looks good!
+  <div class="ligne-form row">
+    <form class="needs-validation" novalidate>
+      <!--id="add-candidat-form" #addcandidat="ngForm" -->
+      <div class="form-row">
+        <div class="col-md-5 mb-3">
+          <label for="validationCustom01">First name</label>
+          <!-- #nom_Candidat="ngForm" [(ngModel)]="candidat.nom_candidat" -->
+          <input type="text" class="form-control" id="nom_candidat" value=".." required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="col-md-5 mb-3">
+          <label for="validationCustom02">Last name</label>
+          <!-- #prenom_candidat="ngForm" [(ngModel)]="candidat.prenom_candidat" -->
+          <input type="text" class="form-control" id="prenom_candidat" value=".." required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
         </div>
       </div>
-      <div class="col-md-5 mb-3">
-        <label for="validationCustom02">Last name</label>
-        <!-- #prenom_candidat="ngForm" [(ngModel)]="candidat.prenom_candidat" -->
-        <input type="text" class="form-control" id="prenom_candidat" value=".." required>
-        <div class="valid-feedback">
-          Looks good!
+
+      <div class="form-row">
+        <div class="col-md-5 mb-3">
+          <label for="validationCustom03">Poste candidature</label>
+          <!-- #poste_candidature="ngForm" [(ngModel)]="candidature.poste_candidature" -->
+          <input type="text" class="form-control" id="poste_candidature" required>
+          <div class="invalid-feedback">
+            Please provide a valid city.
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="form-row">
-      <div class="col-md-5 mb-3">
-        <label for="validationCustom03">Poste candidature</label>
-        <!-- #poste_candidature="ngForm" [(ngModel)]="candidature.poste_candidature" -->
-        <input type="text" class="form-control" id="poste_candidature" required>
-        <div class="invalid-feedback">
-          Please provide a valid city.
+      <div class="form-row">
+        <div class="col-md-4 mb-3"></div>
+        <div class="col-md-4 mb-3">
+          <button class="center-align" type="submit"
+                  style="font-family: cursive; width: 80% ; height: auto; margin-left: 5%; font-size: 30px;
+                      background-image: linear-gradient(to right, #f7ac52, #f99081);">
+            Create Candidature
+          </button>
         </div>
+        <div class="col-md-4 mb-3"></div>
       </div>
-      <div class="col-md-3 mb-3">
-        <label for="validationCustom05">login</label>
-        <!-- #login="ngForm" [(ngModel)]="candidature.login" -->
-        <input type="text" class="form-control" id="login" required>
-        <div class="invalid-feedback">
-          Please provide a valid zip.
-        </div>
-      </div>
-    </div>
-    <div class="form-row">
-      <div class="col-md-10 mb-3">
-        <label for="validationCustom03"> Password</label>
-        <!-- #password="ngForm" [(ngModel)]="candidature.password" -->
-        <input type="password" class="form-control" id="password" required>
-        <div class="invalid-feedback">
-          Please provide a valid city.
-        </div>
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="col-md-4 mb-3"></div>
-      <div class="col-md-4 mb-3">
-        <button class="btn-large btn-submit center-align" type="submit"
-                style="font-family: cursive; height:120% ; margin-left: 5%; font-size: 30px;
-                    background-image: linear-gradient(to right, #f7ac52, #f99081);">
-          Create Candidature
-        </button>
-      </div>
-      <div class="col-md-4 mb-3"></div>
-    </div>
 
 
-  </form>
-  <div class="ligne-vide row" style="margin-top: 15%; margin-bottom: 15%;"></div>
+    </form>
+    <div class="ligne-vide row" style="margin-top: 15%; margin-bottom: 15%;"></div>
 
-  <script>
-      // Example starter JavaScript for disabling form submissions if there are invalid fields
-      (function() {
-          'use strict';
-          window.addEventListener('load', function() {
-              // Fetch all the forms we want to apply custom Bootstrap validation styles to
-              var forms = document.getElementsByClassName('needs-validation');
-              // Loop over them and prevent submission
-              var validation = Array.prototype.filter.call(forms, function(form) {
-                  form.addEventListener('submit', function(event) {
-                      if (form.checkValidity() === false) {
-                          event.preventDefault();
-                          event.stopPropagation();
-                      }
-                      form.classList.add('was-validated');
-                  }, false);
-              });
-          }, false);
-      })();
-  </script>
-</div>
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function() {
+            'use strict';
+            window.addEventListener('load', function() {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function(form) {
+                    form.addEventListener('submit', function(event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
+    </script>
+  </div>
