add login signup

--- a/pfaProject/Angular/src/app/app.component.html
+++ b/pfaProject/Angular/src/app/app.component.html
@@ -1,20 +1,1 @@
-  <div class="container">
-    <div class="row">
-
-      <div class="col-1"></div>
-      <div class="col-3">
-        <img src="../assets/images/logo-FOD.jpg" style="width: 90px; ">
-      </div>
-      <div class="col-7">
-        <h1>Hello project Angular FOD-recrutement</h1>
-      </div>
-    </div>
-
-    <ul>
-        <li> <a [routerLink]="['home']">Home</a> </li>
-        <li> <a [routerLink]="['add-candidat']">Ajout Candidat</a> </li>
-        <li> <a [routerLink]="['add-candidature']">Ajout Candidature</a> </li>
-      </ul>
-
-    <router-outlet></router-outlet>
-  </div>
+<app-login></app-login>
