--- a/pfaProject/Angular/src/app/login/login.component.html
+++ b/pfaProject/Angular/src/app/login/login.component.html
@@ -43,7 +43,7 @@
   
         <!-- Register -->
         <p>Not a member?
-          <a routerLink="/signin" >Register</a>
+          <a routerLink="/signup" >Register</a>
         </p>
   
         <!-- Social login -->
