--- a/pfaProject/Angular/src/app/login/login.component.html
+++ b/pfaProject/Angular/src/app/login/login.component.html
@@ -39,7 +39,7 @@
   
         <!-- Sign in button -->
         <button mdbBtn color="info" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
-          type="submit">Sign in</button>
+          type="submit" [routerLink]="['/main']" routerLinkActive="router-link-active" >Sign in</button>
   
         <!-- Register -->
         <p>Not a member?
