--- a/pfaProject/Angular/src/app/candidat/add-candidat/add-candidat.component.html
+++ b/pfaProject/Angular/src/app/candidat/add-candidat/add-candidat.component.html
@@ -6,7 +6,7 @@
 
 <div class="ligne-vide row" style="margin-top: 5%; "></div>
 
-<div class="ligne-form row">
+<div class="ligne-form row" style="margin-left: 5% ;">
   <form class="needs-validation" novalidate>
     <!--id="add-candidat-form" #addcandidat="ngForm" -->
     <div class="form-row">
@@ -89,15 +89,18 @@
     </div>
 
     <div class="form-row">
-      <div class="col-md-4 mb-3"></div>
+      <div class="col-md-8 mb-3"></div>
       <div class="col-md-4 mb-3">
         <button class="center-align" type="submit"
-                style="font-family: cursive; height:auto; width:80% ; margin-left: 5%; font-size: 30px;
-                    background-image: linear-gradient(to right, #f7ac52, #f99081);">
-          Create Candidat
+                style="font-family: cursive; font-size: 30px;margin-right: 5%;
+                      background-image: linear-gradient(to right, #f7ac52, #f99081);">
+          <span>Create</span>
+        </button>
+        <button class="center-align" type="reset"
+                style="font-family: cursive; font-size: 30px; margin-right: 5%;">
+          <span>Reset</span>
         </button>
       </div>
-      <div class="col-md-4 mb-3"></div>
     </div>
 
 
