--- a/pfaProject/Angular/src/app/candidature/add-candidature/add-candidature.component.html
+++ b/pfaProject/Angular/src/app/candidature/add-candidature/add-candidature.component.html
@@ -1,85 +1,93 @@
-<div class="ligne-titre row">
-  <div class="col-12">
-    <span class="text-uppercase"
-          style="font-size:xx-large; font-family: cursive; margin-left: 10%;">Ajouter candidature</span>
+  <div class="ligne-titre row">
+    <div class="col-2"></div>
+    <div class="col-8">
+      <span class="text-uppercase"style="font-size:large; font-family: cursive; margin-top: 5%; ">
+        Ajouter candidature
+      </span>
+    </div>
   </div>
+
+<div class="ligne-formulaire row" style="margin-left: 5%;">
+  <form class="was-validated">
+
+    <div class="form-group">
+      <div class="mb-3">
+        <label>liste dynamique des candidats :</label>
+        <select class="custom-select" required>
+          <option>...</option>
+          <option value=""> N° Cin || N° Passport && Nom + Prénom  </option>
+        </select>
+        <div class="invalid-feedback">Example invalid custom select feedback</div>
+      </div>
+    </div>
+
+    <div class="row" style="margin-left: 2%;">
+      <div class="cols-5">
+        <div class="mb-3">   <!-- #nom_Candidat="ngForm" [(ngModel)]="candidat.nom_candidat" -->
+          <label>First name</label>
+          <input type="text" class="form-control" id="nom_candidat" value="First name" required>
+        </div>
+      </div>
+      <div class="cols-5">
+        <div class="mb-3">   <!-- #nom_Candidat="ngForm" [(ngModel)]="candidat.nom_candidat" -->
+          <label>Last name</label>
+          <input type="text" class="form-control" id="prenom_candidat" value="Last name" required>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label>Poste Candidat à Postuler :</label>
+      <select class="custom-select" required>
+        <option value=""> ... </option>
+        <option value="Human Resources"> Human Resources </option>
+        <option value="Software Engineer"> Software Engineer </option>
+        <option value="Analyst"> Analyst </option>
+        <option value="Architect"> Architect </option>
+        <option value="Developer"> Developer </option>
+      </select>
+      <div class="invalid-feedback">Example invalid custom select feedback</div>
+    </div>
+
+    <div class="mb-3"><label>Expertise candidature :</label></div>
+    <div class="custom-control custom-radio">
+      <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
+      <label class="custom-control-label" for="customControlValidation2">Junior</label>
+    </div>
+    <div class="custom-control custom-radio">
+      <input type="radio" class="custom-control-input" id="customControlValidation1" name="radio-stacked" required>
+      <label class="custom-control-label" for="customControlValidation1">Medium</label>
+    </div>
+    <div class="custom-control custom-radio mb-3">
+      <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
+      <label class="custom-control-label" for="customControlValidation3">Senior</label>
+      <div class="invalid-feedback"></div>
+    </div>
+
+    <div class="custom-file">
+      <input type="file" class="custom-file-input" id="validatedCustomFile" required>
+      <label class="custom-file-label" for="validatedCustomFile">Choose PDF file...</label>
+      <div class="invalid-feedback">Example invalid custom file feedback</div>
+    </div>
+    <!--
+      <div class="custom-control custom-checkbox mb-3">
+      <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
+      <label class="custom-control-label" for="customControlValidation1">Check this custom checkbox</label>
+      <div class="invalid-feedback">Example invalid feedback text</div>
+    </div>
+     -->
+    <div class="row">
+        <button class="btn btn-outline-dark btn-sm" type="submit"
+                style="font-family: cursive; font-size: 20px;margin-left: 70%;background: #fd746b;">
+          <span>Create</span>
+        </button>
+        <button class="btn btn-outline-dark btn-sm" type="reset"
+                style="font-family: cursive; font-size: 20px; margin-left: 5%;">
+          <span>Reset</span>
+        </button>
+
+    </div>
+
+  </form>
 </div>
 
-<div class="ligne-vide row" style="margin-top: 5%; "></div>
-
-  <div class="ligne-form row" style="margin-left: 5%;" >
-    <form class="needs-validation" novalidate>
-      <!--id="add-candidat-form" #addcandidat="ngForm" -->
-      <div class="form-row">
-        <div class="col-md-5 mb-3">
-          <label for="validationCustom01">First name</label>
-          <!-- #nom_Candidat="ngForm" [(ngModel)]="candidat.nom_candidat" -->
-          <input type="text" class="form-control" id="nom_candidat" value=".." required>
-          <div class="valid-feedback">
-            Looks good!
-          </div>
-        </div>
-        <div class="col-md-5 mb-3">
-          <label for="validationCustom02">Last name</label>
-          <!-- #prenom_candidat="ngForm" [(ngModel)]="candidat.prenom_candidat" -->
-          <input type="text" class="form-control" id="prenom_candidat" value=".." required>
-          <div class="valid-feedback">
-            Looks good!
-          </div>
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="col-md-5 mb-3">
-          <label for="validationCustom03">Poste candidature</label>
-          <!-- #poste_candidature="ngForm" [(ngModel)]="candidature.poste_candidature" -->
-          <input type="text" class="form-control" id="poste_candidature" required>
-          <div class="invalid-feedback">
-            Please provide a valid poste candidature.
-          </div>
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="col-md-7 mb-3"></div>
-        <div class="col-md-2 mb-3">
-          <button class="center-align" type="submit"
-                  style="font-family: cursive; font-size: 30px;
-                      background-image: linear-gradient(to right, #f7ac52, #f99081);">
-            <span>Create</span>
-          </button>
-        </div>
-        <div class="col-md-1 mb-3"></div>
-        <div class="col-md-2 mb-3">
-          <button class="center-align" type="reset"
-                  style="font-family: cursive; font-size: 30px;">
-            <span>Reset</span>
-          </button>
-        </div>
-      </div>
-
-
-    </form>
-    <div class="ligne-vide row" style="margin-top: 15%; margin-bottom: 15%;"></div>
-
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function() {
-            'use strict';
-            window.addEventListener('load', function() {
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                var forms = document.getElementsByClassName('needs-validation');
-                // Loop over them and prevent submission
-                var validation = Array.prototype.filter.call(forms, function(form) {
-                    form.addEventListener('submit', function(event) {
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })();
-    </script>
-  </div>
