--- a/pfaProject/Angular/src/app/login/login.component.html
+++ b/pfaProject/Angular/src/app/login/login.component.html
@@ -1,70 +1,49 @@
-<!-- Material form login -->
-<mdb-card>
-
-    <mdb-card-header class="info-color white-text text-center py-4">
-      <h5>
-        <strong>Sign in</strong>
-      </h5>
+<mdb-card><!-- Material form login -->
+    <mdb-card-header class="info-color white-text text-center py-4"
+                     style=" background-image: linear-gradient(to right, #f7ac52, #f99081);">
+      <div class="row">
+        <div class="col-2"> <img src="../../assets/images/logo-FOD.jpg" style="width: 35%" ></div>
+        <div class="col-2"><h5><strong>Sign in</strong></h5></div>
+      </div>
     </mdb-card-header>
-  
-  
     <!--Card content-->
     <mdb-card-body class="px-lg-5 pt-0">
-  
       <!-- Form -->
       <form class="text-center" style="color: #757575;">
-  
-        <!-- Email -->
-        <div class="md-form">
+        <div class="md-form"> <!-- Email -->
           <input type="email" id="materialLoginFormEmail" class="form-control" mdbInput>
           <label for="materialLoginFormEmail">E-mail</label>
         </div>
-  
-        <!-- Password -->
-        <div class="md-form">
+        <div class="md-form"> <!-- Password -->
           <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput>
           <label for="materialLoginFormPassword">Password</label>
         </div>
-  
+
         <div class="d-flex justify-content-around">
-          <div>
-            <!-- Remember me -->
-            <mdb-checkbox>Remember me</mdb-checkbox>
+          <div><!-- Remember me --><mdb-checkbox>Remember me</mdb-checkbox></div>
+          <div><!-- Forgot password --><a href="">Forgot password?</a></div>
+        </div>        <!-- Sign in button -->
+        <div class="row">
+          <div class="col-md-5"></div>
+          <div class="col-md-2">
+            <button mdbBtn outline="true" rounded="true" block="true"
+                    class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" [routerLink]="['/main']"
+                    routerLinkActive="router-link-active" style="background-image: linear-gradient(to right, #f7ac52, #f99081);">
+              <span style="color: white">Sign in </span>
+            </button>
           </div>
-          <div>
-            <!-- Forgot password -->
-            <a href="">Forgot password?</a>
-          </div>
+          <div class="col-md-5"></div>
         </div>
-  
-        <!-- Sign in button -->
-        <button mdbBtn color="info" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
-          type="submit" [routerLink]="['/main']" routerLinkActive="router-link-active" >Sign in</button>
-  
-        <!-- Register -->
-        <p>Not a member?
-          <a routerLink="/signup" >Register</a>
-        </p>
-  
-        <!-- Social login -->
+                            <!-- Register -->
+        <p>Not a member?<a routerLink="/signup" >Register</a></p>
+                            <!-- Social login -->
         <p>or sign in with:</p>
-        <a type="button" mdbBtn floating="true" color="fb" size="sm">
-          <mdb-icon fab icon="facebook"></mdb-icon>
-        </a>
-        <a type="button" mdbBtn floating="true" color="tw" size="sm">
-          <mdb-icon fab icon="twitter"></mdb-icon>
-        </a>
-        <a type="button" mdbBtn floating="true" color="li" size="sm">
-          <mdb-icon fab icon="linkedin"></mdb-icon>
-        </a>
-        <a type="button" mdbBtn floating="true" color="git" size="sm">
-          <mdb-icon fab icon="github"></mdb-icon>
-        </a>
-        
+        <a type="button" mdbBtn floating="true" color="fb" size="sm"><mdb-icon fab icon="facebook"></mdb-icon></a>
+        <a type="button" mdbBtn floating="true" color="tw" size="sm"><mdb-icon fab icon="twitter"></mdb-icon></a>
+        <a type="button" mdbBtn floating="true" color="li" size="sm"><mdb-icon fab icon="linkedin"></mdb-icon></a>
+        <a type="button" mdbBtn floating="true" color="git" size="sm"><mdb-icon fab icon="github"></mdb-icon></a>
       </form>
       <!-- Form -->
-  
     </mdb-card-body>
-  
   </mdb-card>
   <!-- Material form login -->
