my integration and routing the whole project

--- a/pfaProject/Angular/src/app/login/login.component.html
+++ b/pfaProject/Angular/src/app/login/login.component.html
@@ -27,7 +27,7 @@
           <div class="col-md-5"></div>
           <div class="col-md-2">
             <button mdbBtn outline="true" rounded="true" block="true"
-                    class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" [routerLink]="['/main']"
+                    class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" [routerLink]="['/home']"
                     routerLinkActive="router-link-active" style="background-image: linear-gradient(to right, #f7ac52, #f99081);">
               <span style="color: white">Sign in </span>
             </button>
