--- a/pfaProject/Angular/src/app/login/login.component.html
+++ b/pfaProject/Angular/src/app/login/login.component.html
@@ -11,12 +11,18 @@
       <!-- Form -->
       <form class="text-center" style="color: #757575;">
         <div class="md-form"> <!-- Email -->
-          <input type="email" id="materialLoginFormEmail" class="form-control" mdbInput>
+          <input type="email" id="materialLoginFormEmail" class="form-control" required ngModel name="email" #email ="ngModel" mdbInput>
           <label for="materialLoginFormEmail">E-mail</label>
+          <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
+            Please Enter your Email
+          </div>
         </div>
         <div class="md-form"> <!-- Password -->
-          <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput>
+          <input type="password" id="materialLoginFormPassword" class="form-control" required ngModel name="password" #password="ngModel"  mdbInput>
           <label for="materialLoginFormPassword">Password</label>
+          <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
+            Please Enter your password
+          </div>
         </div>
 
         <div class="d-flex justify-content-around">
@@ -28,7 +34,8 @@
           <div class="col-md-2">
             <button mdbBtn outline="true" rounded="true" block="true"
                     class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" [routerLink]="['/home']"
-                    routerLinkActive="router-link-active" style="background-image: linear-gradient(to right, #f7ac52, #f99081);">
+                    routerLinkActive="router-link-active" style="background-image: linear-gradient(to right, #f7ac52, #f99081);"
+                    [disabled]="email.invalid || password.invalid" class="btn btn-success">
               <span style="color: white">Sign in </span>
             </button>
           </div>
