--- a/pfaProject/Angular/src/app/home/liste-des-candidatures/liste-des-candidatures.component.html
+++ b/pfaProject/Angular/src/app/home/liste-des-candidatures/liste-des-candidatures.component.html
@@ -23,25 +23,25 @@
             <div class="aaaa col-12 col-sm-12">
 
               <div class="title-liste-1">
-                <label style="vertical-align: text-top;">Ajout Condidat. </label>
+                <label style="vertical-align: text-top;"><a routerLink="/add-candidat" > Ajout Condidat.</a> </label>
               </div>
 
               <div style="margin-top: 5%;"></div>
               <div class="menu-item">
                 <a routerLink="add-candidature" style="color: black;">
-                  <span class="liste text-black" onclick="closeNav()">Ajout Condidature.</span>
+                  <span class="liste text-black" onclick="closeNav()"><a routerLink="/add-candidature" >Ajout Condidature.</a></span>
                 </a>
               </div>
 
               <div class="menu-item" >
                 <a routerLink="add-candidat" style="color: black;">
-                  <span class="liste text-black">Ajout candidat</span>
+                  <span class="liste text-black"><a routerLink="/add-candidat" > Ajout Condidat.</a></span>
                 </a>
               </div>
 
               <div class="menu-item" >
                 <a routerLink="liste-des-candidat" style="color: black;">
-                  <span class="liste text-black">liste des candidats</span>
+                  <span class="liste text-black"><a routerLink="/liste-des-candidat">liste des candidats.</a></span>
                 </a>
               </div>
             </div>
