--- a/pfaProject/Angular/src/app/home/home.component.html
+++ b/pfaProject/Angular/src/app/home/home.component.html
@@ -4,7 +4,8 @@
       <div class="overlay-content"style=" ">
         <div class="ligne-0 row" >
           <div class="fermer col-1 col-sm-1">
-            <span class="closebtn" style="cursor:pointer" onclick="closeNav()">&times;</span>
+            
+            <button class="btn btn-danger my-2 my-sm-0" (click)="onLogout()">Logout</button>
           </div>
           <div class="espacement col-8 col-sm-8" style="height: 100vh;">
             <div class="imageFOD row">
