--- a/pfaProject/Angular/src/app/login/login.component.html
+++ b/pfaProject/Angular/src/app/login/login.component.html
@@ -9,18 +9,18 @@
     <!--Card content-->
     <mdb-card-body class="px-lg-5 pt-0">
       <!-- Form -->
-      <form class="text-center" style="color: #757575;">
+      <form class="text-center" #form ="ngForm" autocomplete="off" (submit)="onSubmit(form)" style="color: #757575;">
         <div class="md-form"> <!-- Email -->
-          <input type="email" id="materialLoginFormEmail" class="form-control" required ngModel name="email" #email ="ngModel" mdbInput>
-          <label for="materialLoginFormEmail">E-mail</label>
-          <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
-            Please Enter your Email
+          <input #UserName="ngModel" name="UserName"  [(ngModel)]="formModel.UserName" type="text" id="materialLoginFormEmail" class="form-control" required mdbInput>
+          <label for="materialLoginFormEmail">User Name</label>
+          <div *ngIf="UserName.touched && UserName.invalid" class="alert alert-danger">
+            Please Enter your User Name
           </div>
         </div>
         <div class="md-form"> <!-- Password -->
-          <input type="password" id="materialLoginFormPassword" class="form-control" required ngModel name="password" #password="ngModel"  mdbInput>
+          <input #Password="ngModel" name="Password" [(ngModel)]="formModel.Password" type="password" id="materialLoginFormPassword" class="form-control" required mdbInput>
           <label for="materialLoginFormPassword">Password</label>
-          <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
+          <div *ngIf="Password.touched && Password.invalid" class="alert alert-danger">
             Please Enter your password
           </div>
         </div>
@@ -33,9 +33,9 @@
           <div class="col-md-5"></div>
           <div class="col-md-2">
             <button mdbBtn outline="true" rounded="true" block="true"
-                    class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" [routerLink]="['/home']"
-                    routerLinkActive="router-link-active" style="background-image: linear-gradient(to right, #f7ac52, #f99081);"
-                    [disabled]="email.invalid || password.invalid" class="btn btn-success">
+                    class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" 
+                     style="background-image: linear-gradient(to right, #f7ac52, #f99081);"
+                    [disabled]="form.invalid" class="btn btn-success">
               <span style="color: white">Sign in </span>
             </button>
           </div>
