--- a/pfaProject/Angular/src/app/login/login.component.html
+++ b/pfaProject/Angular/src/app/login/login.component.html
@@ -1,99 +1,56 @@
 <mdb-card><!-- Material form login -->
-  <!-- nav-bar -->
-
-  <mdb-card-header class="info-color white-text text-center py-4"
-                   style=" background-image: linear-gradient(to right, #f7ac52, #f99081);">
-  </mdb-card-header>
-
-  <div class="container">
-    <div class="imageFOF row">
-      <div class="col-4"></div>
-      <div class="col-4">
-        <img src="../../assets/images/logo-FOD.jpg" style="width: 60%;">
+    <mdb-card-header class="info-color white-text text-center py-4"
+                     style=" background-image: linear-gradient(to right, #f7ac52, #f99081);">
+      <div class="row">
+        <div class="col-2"> <img src="../../assets/images/logo-FOD.jpg" style="width: 35%" ></div>
+        <div class="col-2"><h5><strong>Sign in</strong></h5></div>
       </div>
-      <div class="col-4"></div>
-    </div>
+    </mdb-card-header>
+    <!--Card content-->
     <mdb-card-body class="px-lg-5 pt-0">
       <!-- Form -->
-<<<<<<< HEAD
       <form class="text-center" #form ="ngForm" autocomplete="off" (submit)="onSubmit(form)" style="color: #757575;">
         <div class="md-form"> <!-- Email -->
           <input #UserName="ngModel" name="UserName"  [(ngModel)]="formModel.UserName" type="text" id="materialLoginFormEmail" class="form-control" required mdbInput>
           <label for="materialLoginFormEmail">User Name</label>
           <div *ngIf="UserName.touched && UserName.invalid" class="alert alert-danger">
             Please Enter your User Name
-=======
-      <form class="text-center" style="color: #757575;">
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4 text-center md-form" style="width: 40%;" > <!-- Email -->
-            <input type="email" id="materialLoginFormEmail" class="form-control" ngModel name="email" #email ="ngModel" mdbInput >
-            <label for="materialLoginFormEmail">E-mail</label>
-            <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
-              Please Enter your Email
-            </div>
           </div>
-          <div class="col-4"></div>
         </div>
-
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4 text-center md-form"  style="width: 40%;"> <!-- Password -->
-            <input type="password" id="materialLoginFormPassword" class="form-control" ngModel name="password" #password="ngModel"  mdbInput>
-            <label for="materialLoginFormPassword">Password</label>
-            <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
-              Please Enter your password
-            </div>
->>>>>>> 51759e1b2f870519ea9785659eb6b2a44076a3fb
-          </div>
-          <div class="col-4"></div>
-        </div>
-<<<<<<< HEAD
         <div class="md-form"> <!-- Password -->
           <input #Password="ngModel" name="Password" [(ngModel)]="formModel.Password" type="password" id="materialLoginFormPassword" class="form-control" required mdbInput>
           <label for="materialLoginFormPassword">Password</label>
           <div *ngIf="Password.touched && Password.invalid" class="alert alert-danger">
             Please Enter your password
-=======
-
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4 d-flex justify-content-around">
-            <div><!-- Remember me --><mdb-checkbox>Remember me</mdb-checkbox></div>
-            <div><!-- Forgot password --><a href="">Forgot password?</a></div>
->>>>>>> 51759e1b2f870519ea9785659eb6b2a44076a3fb
           </div>
-          <div class="col-4"></div>
         </div>
 
-        <!-- Sign in button -->
+        <div class="d-flex justify-content-around">
+          <div><!-- Remember me --><mdb-checkbox>Remember me</mdb-checkbox></div>
+          <div><!-- Forgot password --><a href="">Forgot password?</a></div>
+        </div>        <!-- Sign in button -->
         <div class="row">
           <div class="col-md-5"></div>
           <div class="col-md-2">
             <button mdbBtn outline="true" rounded="true" block="true"
-<<<<<<< HEAD
                     class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" 
                      style="background-image: linear-gradient(to right, #f7ac52, #f99081);"
                     [disabled]="form.invalid" class="btn btn-success">
-=======
-                    class="my-4 waves-effect z-depth-0" mdbWavesEffect type="submit" [routerLink]="['/home']"
-                    routerLinkActive="router-link-active" [disabled]="email.invalid || password.invalid" style="background-image: linear-gradient(to right, #f7ac52, #f99081);">
->>>>>>> 51759e1b2f870519ea9785659eb6b2a44076a3fb
               <span style="color: white">Sign in </span>
             </button>
           </div>
           <div class="col-md-5"></div>
         </div>
-        <!-- Register -->
+                            <!-- Register -->
         <p>Not a member?<a routerLink="/signup" >Register</a></p>
-        <!-- Social login -->
-
+                            <!-- Social login -->
+        <p>or sign in with:</p>
+        <a type="button" mdbBtn floating="true" color="fb" size="sm"><mdb-icon fab icon="facebook"></mdb-icon></a>
+        <a type="button" mdbBtn floating="true" color="tw" size="sm"><mdb-icon fab icon="twitter"></mdb-icon></a>
+        <a type="button" mdbBtn floating="true" color="li" size="sm"><mdb-icon fab icon="linkedin"></mdb-icon></a>
+        <a type="button" mdbBtn floating="true" color="git" size="sm"><mdb-icon fab icon="github"></mdb-icon></a>
       </form>
       <!-- Form -->
     </mdb-card-body>
-  </div>
-
-  <!--Card content-->
-
-</mdb-card>
-<!-- Material form login -->
+  </mdb-card>
+  <!-- Material form login -->
